# hb_companion_wear_os

./: .gitignore  ARCHITECTURE.md
design_handoff_huckleberry_watch/: Huckleberry Watch - Squish tweakable.html  README.md  concepts.css  squish-app.jsx  squish-final.css  squish-final.jsx  watch-core.jsx
garmin_app/: README.md  manifest.xml
garmin_app/resources/strings/: strings.xml
garmin_app/source/: BabyApi.mc  BabyApp.mc  BabyDelegate.mc  BabyState.mc  BabyView.mc  Secrets.mc.example
python_service/: child_select.py  hb.py  main.py  pyproject.toml  state.py  status_logic.py
python_service/deploy/: README.md  baby-svc-public.service  baby-svc.service  gen-cert.sh
python_service/tests/: test_child_select.py  test_status_logic.py  test_timezone.py
watch_app/: README.md  secrets.properties.example  settings.gradle.kts
watch_app/app/: build.gradle.kts
watch_app/app/src/main/: AndroidManifest.xml
watch_app/app/src/main/kotlin/com/arbaktos/babywatch/: MainActivity.kt
watch_app/app/src/main/kotlin/com/arbaktos/babywatch/data/: BabyApi.kt
watch_app/app/src/main/kotlin/com/arbaktos/babywatch/ui/: Design.kt  SleepViewModel.kt  SquishScreen.kt
watch_app/app/src/main/res/drawable/: ic_launcher_foreground.xml
watch_app/app/src/main/res/values/: colors.xml  strings.xml
watch_app/app/src/test/kotlin/com/arbaktos/babywatch/ui/: SleepViewModelTest.kt
watch_app/gradle/: libs.versions.toml
